// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider Component should render with style 1`] = `
<Component
  style={
    Array [
      Object {
        "backgroundColor": "#bcbbc1",
        "height": 0.5,
      },
      Object {
        "backgroundColor": "blue",
      },
    ]
  }
/>
`;

exports[`Divider Component should render without issues 1`] = `
<Component
  style={
    Array [
      Object {
        "backgroundColor": "#bcbbc1",
        "height": 0.5,
      },
      undefined,
    ]
  }
/>
`;
